--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+html * {
+font-family: "Sarabun", 'Roboto', sans-serif;
+font-size: inherit;
+color: inherit;
+background-color:  inherit;
+}
